--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/palladian-0.1.5-SNAPSHOT-javadoc.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/palladian-0.1.5-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tika-app-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/maui.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Maui1.2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
