--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/palladian-0.1.5-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tika-app-1.5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Maui1.2"/>
+	<classpathentry exported="true" kind="lib" path="lib/jsoup-1.7.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
