--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="se/kth/ict/docaid/course/DebugXMLParser.java|se/kth/ict/docaid/parser/course/DebugXMLParser.java" kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="lib" path="lib/palladian-0.1.5-SNAPSHOT-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/palladian-0.1.5-SNAPSHOT-jar-with-dependencies.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/tika-app-1.5.jar"/>
+	<classpathentry including="**/*.java" kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/org/jsoup/jsoup/1.7.2/jsoup-1.7.2.jar" sourcepath="M2_REPO/org/jsoup/jsoup/1.7.2/jsoup-1.7.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/andrew/.m2/repository/org/jsoup/jsoup/1.7.2/jsoup-1.7.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/me/champeau/jlangdetect/jlangdetect-extra/0.4/jlangdetect-extra-0.4.jar" sourcepath="M2_REPO/me/champeau/jlangdetect/jlangdetect-extra/0.4/jlangdetect-extra-0.4-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/andrew/.m2/repository/me/champeau/jlangdetect/jlangdetect-extra/0.4/jlangdetect-extra-0.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/me/champeau/jlangdetect/jlangdetect-europarl/0.4/jlangdetect-europarl-0.4.jar" sourcepath="M2_REPO/me/champeau/jlangdetect/jlangdetect-europarl/0.4/jlangdetect-europarl-0.4-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/andrew/.m2/repository/me/champeau/jlangdetect/jlangdetect-europarl/0.4/jlangdetect-europarl-0.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/me/champeau/jlangdetect/jlangdetect/0.4/jlangdetect-0.4.jar" sourcepath="M2_REPO/me/champeau/jlangdetect/jlangdetect/0.4/jlangdetect-0.4-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/andrew/.m2/repository/me/champeau/jlangdetect/jlangdetect/0.4/jlangdetect-0.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/andrew/.m2/repository/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/andrew/workspace/knime/DocAid/lib/palladian-0.1.5-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="/home/andrew/workspace/knime/DocAid/lib/palladian-0.1.5-SNAPSHOT-javadoc.jar"/>
+	<classpathentry kind="lib" path="/home/andrew/workspace/knime/DocAid/lib/tika-app-1.5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Maui1.2"/>
-	<classpathentry exported="true" kind="lib" path="lib/jsoup-1.7.3.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
