--- a/.classpath
+++ b/.classpath
@@ -28,7 +28,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/tika-app-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/palladian-0.1.5-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="lib/maui-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/palladian-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
